cmake_minimum_required(VERSION 3.10)
project(oj_problem_096 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(code main.cpp)

# Optimize for speed and warnings
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(code PRIVATE -O2 -pipe -static-libstdc++ -static-libgcc -Wall -Wextra -Wconversion -Wno-sign-conversion)
endif()

